// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render default Tab 1`] = `
"<div class=\\"er-tab er-tab--default er-tab--top\\">
  <div class=\\"er-tab__header\\">
    <div class=\\"er-tab__wrapper\\">
      <div class=\\"er-tab__line\\"></div><a class=\\"er-tab__item is-active\\" href=\\"javascript:;\\">首页</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">用户管理</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">角色管理</a>
    </div>
  </div>
  <div class=\\"er-tab__content\\">
    <div class=\\"er-tab-panel is-active\\">1</div>
    <div class=\\"er-tab-panel\\">2</div>
    <div class=\\"er-tab-panel\\">3</div>
  </div>
</div>"
`;

exports[`should render tabs of different sizes 1`] = `
"<div class=\\"er-tab er-tab--small er-tab--top\\">
  <div class=\\"er-tab__header\\">
    <div class=\\"er-tab__wrapper\\">
      <div class=\\"er-tab__line\\"></div><a class=\\"er-tab__item is-active\\" href=\\"javascript:;\\">首页</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">用户管理</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">角色管理</a>
    </div>
  </div>
  <div class=\\"er-tab__content\\">
    <div class=\\"er-tab-panel is-active\\">1</div>
    <div class=\\"er-tab-panel\\">2</div>
    <div class=\\"er-tab-panel\\">3</div>
  </div>
</div>"
`;

exports[`should render tabs of different sizes 2`] = `
"<div class=\\"er-tab er-tab--default er-tab--top\\">
  <div class=\\"er-tab__header\\">
    <div class=\\"er-tab__wrapper\\">
      <div class=\\"er-tab__line\\"></div><a class=\\"er-tab__item is-active\\" href=\\"javascript:;\\">首页</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">用户管理</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">角色管理</a>
    </div>
  </div>
  <div class=\\"er-tab__content\\">
    <div class=\\"er-tab-panel is-active\\">1</div>
    <div class=\\"er-tab-panel\\">2</div>
    <div class=\\"er-tab-panel\\">3</div>
  </div>
</div>"
`;

exports[`should render tabs of different sizes 3`] = `
"<div class=\\"er-tab er-tab--large er-tab--top\\">
  <div class=\\"er-tab__header\\">
    <div class=\\"er-tab__wrapper\\">
      <div class=\\"er-tab__line\\" style=\\"width: -40px; transform: translateX(20px); transition-duration: 0.3s;\\"></div><a class=\\"er-tab__item is-active\\" href=\\"javascript:;\\">首页</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">用户管理</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">角色管理</a>
    </div>
  </div>
  <div class=\\"er-tab__content\\">
    <div class=\\"er-tab-panel is-active\\">1</div>
    <div class=\\"er-tab-panel\\">2</div>
    <div class=\\"er-tab-panel\\">3</div>
  </div>
</div>"
`;

exports[`should render tabs of different tab-positions 1`] = `
"<div class=\\"er-tab er-tab--default er-tab--left\\">
  <div class=\\"er-tab__header\\">
    <div class=\\"er-tab__wrapper\\">
      <div class=\\"er-tab__line\\"></div><a class=\\"er-tab__item is-active\\" href=\\"javascript:;\\">首页</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">用户管理</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">角色管理</a>
    </div>
  </div>
  <div class=\\"er-tab__content\\">
    <div class=\\"er-tab-panel is-active\\">1</div>
    <div class=\\"er-tab-panel\\">2</div>
    <div class=\\"er-tab-panel\\">3</div>
  </div>
</div>"
`;

exports[`should render tabs of different tab-positions 2`] = `
"<div class=\\"er-tab er-tab--default er-tab--top\\">
  <div class=\\"er-tab__header\\">
    <div class=\\"er-tab__wrapper\\">
      <div class=\\"er-tab__line\\"></div><a class=\\"er-tab__item is-active\\" href=\\"javascript:;\\">首页</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">用户管理</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">角色管理</a>
    </div>
  </div>
  <div class=\\"er-tab__content\\">
    <div class=\\"er-tab-panel is-active\\">1</div>
    <div class=\\"er-tab-panel\\">2</div>
    <div class=\\"er-tab-panel\\">3</div>
  </div>
</div>"
`;

exports[`should render tabs of different tab-positions 3`] = `
"<div class=\\"er-tab er-tab--default er-tab--bottom\\">
  <div class=\\"er-tab__header\\">
    <div class=\\"er-tab__wrapper\\">
      <div class=\\"er-tab__line\\" style=\\"width: -40px; transform: translateX(20px); transition-duration: 0s;\\"></div><a class=\\"er-tab__item is-active\\" href=\\"javascript:;\\">首页</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">用户管理</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">角色管理</a>
    </div>
  </div>
  <div class=\\"er-tab__content\\">
    <div class=\\"er-tab-panel is-active\\">1</div>
    <div class=\\"er-tab-panel\\">2</div>
    <div class=\\"er-tab-panel\\">3</div>
  </div>
</div>"
`;

exports[`should render tabs of different tab-positions 4`] = `
"<div class=\\"er-tab er-tab--default er-tab--right\\">
  <div class=\\"er-tab__header\\">
    <div class=\\"er-tab__wrapper\\">
      <div class=\\"er-tab__line\\" style=\\"width: -40px; transform: translateX(20px); transition-duration: 0s;\\"></div><a class=\\"er-tab__item is-active\\" href=\\"javascript:;\\">首页</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">用户管理</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">角色管理</a>
    </div>
  </div>
  <div class=\\"er-tab__content\\">
    <div class=\\"er-tab-panel is-active\\">1</div>
    <div class=\\"er-tab-panel\\">2</div>
    <div class=\\"er-tab-panel\\">3</div>
  </div>
</div>"
`;

exports[`should render tabs of different types 1`] = `
"<div class=\\"er-tab er-tab--default er-tab--top er-tab--card\\">
  <div class=\\"er-tab__header\\">
    <div class=\\"er-tab__wrapper\\">
      <div class=\\"er-tab__line\\"></div><a class=\\"er-tab__item is-active\\" href=\\"javascript:;\\">首页</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">用户管理</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">角色管理</a>
    </div>
  </div>
  <div class=\\"er-tab__content\\">
    <div class=\\"er-tab-panel is-active\\">1</div>
    <div class=\\"er-tab-panel\\">2</div>
    <div class=\\"er-tab-panel\\">3</div>
  </div>
</div>"
`;

exports[`should render tabs of different types 2`] = `
"<div class=\\"er-tab er-tab--default er-tab--top er-tab--border-card\\">
  <div class=\\"er-tab__header\\">
    <div class=\\"er-tab__wrapper\\">
      <div class=\\"er-tab__line\\"></div><a class=\\"er-tab__item is-active\\" href=\\"javascript:;\\">首页</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">用户管理</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">角色管理</a>
    </div>
  </div>
  <div class=\\"er-tab__content\\">
    <div class=\\"er-tab-panel is-active\\">1</div>
    <div class=\\"er-tab-panel\\">2</div>
    <div class=\\"er-tab-panel\\">3</div>
  </div>
</div>"
`;

exports[`should render v-model Tab 1`] = `
"<div class=\\"er-tab er-tab--default er-tab--top\\">
  <div class=\\"er-tab__header\\">
    <div class=\\"er-tab__wrapper\\">
      <div class=\\"er-tab__line\\" style=\\"width: -40px; transform: translateX(20px); transition-duration: 0.3s;\\"></div><a class=\\"er-tab__item is-active\\" href=\\"javascript:;\\">首页</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">用户管理</a><a class=\\"er-tab__item\\" href=\\"javascript:;\\">角色管理</a>
    </div>
  </div>
  <div class=\\"er-tab__content\\">
    <div class=\\"er-tab-panel is-active\\">1</div>
    <div class=\\"er-tab-panel\\">2</div>
    <div class=\\"er-tab-panel\\">3</div>
  </div>
</div>"
`;
